# vulkan-guide-2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
chapter_0/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
chapter_1/: CMakeLists.txt  vk_engine.h
chapter_2/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h
chapter_3/: CMakeLists.txt  imgui.ini  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
chapter_4/: CMakeLists.txt  imgui.ini  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
chapter_5/: CMakeLists.txt  imgui.ini  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
shared/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
